hphp/hack/test/typecheck/as_expression/keyset2.php.exp
File "keyset2.php", line 12, characters 33-38:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 26, characters 22-27:
  Definition is here
File "keyset2.php", line 13, characters 18-38:
Invalid argument (Typing[4110])
  File "keyset2.php", line 23, characters 32-37:
  Expected `string`
  File "hackarray.hhi", line 26, characters 35-42:
  But got `arraykey`
File "keyset2.php", line 13, characters 33-38:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 26, characters 22-27:
  Definition is here
File "keyset2.php", line 16, characters 18-41:
Invalid argument (Typing[4110])
  File "keyset2.php", line 23, characters 32-37:
  Expected `string`
  File "hackarray.hhi", line 26, characters 35-42:
  But got `arraykey`
